@@ -1,4 +1,5 @@
 EBUILD perl-Compress-Raw-Bzip2-2.015.ebuild 493 RMD160 8e444c180df302cc342bfb5be854e46803f66b16 SHA1 d6e409429be2da497fa551e8f6d76482b6c9a184 SHA256 9a16af9d7bb86e6d7a70045a84cde4cfd70e104aacfdb634ade4f8bb160dd72e
 EBUILD perl-Compress-Raw-Bzip2-2.019.ebuild 573 RMD160 c62f36b87f8b16783c8a59f1f28028da3e69f522 SHA1 a5b29ee3482bfbcb7cfb97eeb7edf49fa4e58891 SHA256 24b01dddcfd0eb979c22fafa6760c5356fda781f3541bd3c68e119c63db7b0bf
-MISC ChangeLog 810 RMD160 3d8fc6684bc0b7e276af5132752a06dbbb550027 SHA1 a9386a191954dd058dac8b294dc1284e5311d1b2 SHA256 30b2c528031f9122d2ffe78ae31415419d23020618e6830a3d14059b7e9ee918
+EBUILD perl-Compress-Raw-Bzip2-2.020.ebuild 573 RMD160 e21297c84598dc8fd33c64ab266efe38e11682f2 SHA1 ef41d12ce643abb58c44960c38f3d453bbcf7088 SHA256 997ea95a1b200e8c5da1f1d0d6dfd56e335b37f4854fd5992d14736a86660006
+MISC ChangeLog 961 RMD160 aec1c5e44272e84c3754bb2bb41d78ebf11964c9 SHA1 fafa1956f68354f1890ccf74a21fd077b08965de SHA256 3488ddfdce6406777fa8fb3443d5f63b6990b60090487ffe504db5f3707cf1e7
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
