@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Raw-Bzip2/perl-Compress-Raw-Bzip2-2.020.ebuild,v 1.1 2009/06/03 22:27:17 tove Exp $
+
+DESCRIPTION="Virtual for Compress-Raw-Bzip2"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="~perl-core/Compress-Raw-Bzip2-${PV}"
